test deployments/alb-https-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myweb
  annotations:
    name: test
    argocd.argoproj.io/sync-wave: "1"
