test deployments/alb-https-test/Deploymeny.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  io.kompose.service: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: myapp
  template:
    metadata:
      labels:
        io.kompose.service: myapp
    spec:
      containers:
        - name: myapp
          image: myapp
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
