test deployments/alb-https-test/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  io.kompose.service: myapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    io.kompose.service: myapp
